<resources>

  <string name="app_name">Golf Green</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="filter_by">Filter By…</string>
  <string name="welcome">Welcome To Golf Green</string>
  <string name="sub_welcome">Saving You Green Before You Hit The Green</string>
  <string name="search_prompt">Search Location Above To Begin</string>
  <string name="nav_user_name">User Name</string>
  <string name="nav_user_name_subheading">User Email</string>
  <string name="search_title">Search</string>
  <string name="favorite_courses">Favorite Courses</string>
  <string name="course_title">Course Title</string>
  <string name="course_city">Course City</string>
  <string name="favorite_course">Favorite Course</string>
  <string name="profile_settings">Profile Settings</string>
  <string name="home">Home</string>
  <string name="user_name">User Name</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="use_location">Use Location</string>
  <string name="save_changes">Save Changes</string>
  <string name="discard_changes">Discard Changes</string>
  <string name="delete_account">Delete Account</string>
  <string name="login_failure_message">Unable to sign in with provided credentials</string>
  <string name="sign_out">sign out</string>
  <string name="sign_in_welcome">Welcome,</string>
  <string name="sign_in_sub">Please sign in to continue</string>
  <string name="location_search_result">Location Search Result</string>
  <string name="course_page">Course Page</string>
  <string name="search_results">Search Results</string>
  <string name="search_by_hint">Search By City</string>
  <string name="supported_locations"><![CDATA[Supported Locations: Albuquerque, Santa  Fe, Las Cruces]]></string>
  <string name="search_guide">Search Guide: Course, Price, Rating, Phone</string>

</resources>
