<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="#cccccc"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".controller.ProfileSettings">


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:id="@+id/profile_settings"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="#000000"
      android:textSize="36sp"
      android:text="@string/profile_settings"/>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"/>
    </android.support.design.widget.TextInputLayout>

    <Switch
      android:id="@+id/location_switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/use_location"/>
    <Button
      android:id="@+id/save_changes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/save_changes"/>
    <Button
      android:id="@+id/discard_changes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/discard_changes"/>
    <Button
      android:id="@+id/delete_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/delete_account"/>

  </LinearLayout>

</ScrollView>